# celery-svcs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yaml
src/celery_svcs/: __init__.py  _celery.py
tests/: test_celery_svcs.py
