[project]
name = "celery-svcs"
version = "0.1.0"
description = "A Celery integration for SVCS"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "August Bigelow", email = "dev@atbigelow.com" }]
requires-python = ">=3.11"
dependencies = ["celery>=5.4.0", "svcs>=25.1.0"]

[project.urls]
GitHub = "https://github.com/atbigelow/celery-svcs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celery_svcs"]

[dependency-groups]
dev = ["ruff>=0.9.6"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["celery_svcs", "tests"]
